package logica;

public class Elemento {
}
