package presentacion.entidad;

import java.awt.*;
import java.awt.image.BufferedImage;
//import javax.imageio.ImageIO;

public class Entidad {
    public BufferedImage arrib1, arrib2, abajo1, abajo2, izqu1, izqu2, der1, der2;
    public int contadorFigura = 0;
    public int figuraNum = 1;
}
